[package]
name = "Mifi"
version = "0.1.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # 序列化
serde_json ="*"
chrono = { version = "0.4", features = ["serde"] }