[package]
name = "mifi-rs"
version = "0.3.0"
authors = ["yutiansut <yutian@quantaxis.com.cn>","somewheve <somewheve@gmail.com>",]
edition = "2018"
description = "描述为基本行情结构体吗,提供了一种较为统一式转换方法"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # 序列化
serde_json ="*"
chrono = { version = "0.4", features = ["serde"] }
regex = {version="1"}
