[package]
name = "mifi-rs"
version = "0.3.0"
authors = ["yutiansut <yutian@quantaxis.com.cn>","somewheve <somewheve@gmail.com>",]
edition = "2018"
description = "QUANTAXIS MIFI 行情封装协议"


readme = "README.md"
keywords = ["actix", "http", "web", "framework", "async"]
homepage = "https://github.com/yutiansut"
repository = "https://github.com/yutiansut/mifi-rs"
documentation = "https://docs.rs/mifi-rs/"
categories = ["science", "algorithms"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # 序列化
serde_json ="1.0.59"
chrono = { version = "0.4", features = ["serde"] }
regex = {version="1"}
